@@ -98,6 +98,9 @@ Bug Fixes
 
 * SOLR-7066: autoAddReplicas feature has bug when selecting replacement nodes. (Mark Miller)
 
+* SOLR-7370: FSHDFSUtils#recoverFileLease tries to recover the lease every one second after 
+  the first four second wait. (Mark Miller)
+
 Optimizations
 ----------------------
 
